--- a/homelab/ansible/playbooks/upgrade.yaml
+++ b/homelab/ansible/playbooks/upgrade.yaml
@@ -1,8 +1,24 @@
 ---
-- name: My playbook
+- name: Update & Upgrade
   hosts: all
+  become: true
   tasks:
-     - name: Update sources
-       command: sudo apt update
-     - name: Upgrade packages
-       command: sudo apt upgrade -y
+    - name: Update apt repo and cache on all servers
+      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+
+    - name: Upgrade all packages on all servers
+      apt: upgrade=dist force_apt_get=yes
+
+    - name: Check if a reboot is needed on all servers
+      register: reboot_required_file
+      stat: path=/var/run/reboot-required get_md5=no
+
+    - name: Reboot if kernel updated
+      reboot:
+        msg: "Reboot initiated by Ansible for kernel updates"
+        connect_timeout: 5
+        reboot_timeout: 300
+        pre_reboot_delay: 0
+        post_reboot_delay: 30
+        test_command: uptime
+      when: reboot_required_file.stat.exists
