--- a/homelab/ansible/ansible.cfg
+++ b/homelab/ansible/ansible.cfg
@@ -142,7 +142,7 @@
 
 # (pathlist) Comma separated list of Ansible inventory sources
 ;inventory=/etc/ansible/hosts
-inventory=./hosts.yaml
+inventory=./inventory/hosts.yaml
 
 # (pathspec) Colon separated paths in which Ansible will search for HttpApi Plugins.
 ;httpapi_plugins=~/.ansible/plugins/httpapi:/usr/share/ansible/plugins/httpapi
