Production - Fix ansible temp directory

--- a/production/ansible/ansible.cfg
+++ b/production/ansible/ansible.cfg
@@ -170,6 +170,7 @@ inventory=./inventory/hosts.yaml
 
 # (tmppath) Temporary directory for Ansible to use on the controller.
 ;local_tmp=~/.ansible/tmp
+local_tmp  = $HOME/.ansible/tmp
 
 # (list) List of logger names to filter out of the log file
 ;log_filter=
@@ -229,6 +230,7 @@ inventory=./inventory/hosts.yaml
 
 # (pathspec) Colon separated paths in which Ansible will search for Roles.
 ;roles_path=~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+roles_path = ./roles
 
 # (string) Set the main callback used to display Ansible output, you can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
@@ -503,6 +505,7 @@ inventory=./inventory/hosts.yaml
 
 # (string) Temporary directory to use on targets when executing tasks.
 ;remote_tmp=~/.ansible/tmp
+remote_tmp = $HOME/.ansible/tmp
 
 # (list) List of valid system temporary directories on the managed machine for Ansible to choose when it cannot use C(remote_tmp), normally due to permission issues.  These must be world readable, writable, and executable. This list should only contain directories which the system administrator has pre-created with the proper ownership and permissions otherwise security issues can arise.
 ;system_tmpdirs=/var/tmp, /tmp
