--- a/production/ansible/inventory/hosts.yaml
+++ b/production/ansible/inventory/hosts.yaml
@@ -6,3 +6,15 @@ all:
         lithium.dysnomia.studio:
         beryllium.dysnomia.studio:
         bore.dysnomia.studio:
+
+    k3s_server:
+      hosts:
+        192.168.1.3:
+        192.168.1.4:
+        192.168.1.5:
+
+    k3s_cluster:
+      hosts:
+        192.168.1.3:
+        192.168.1.4:
+        192.168.1.5:
