--- a/production/ansible/inventory/hosts.yaml
+++ b/production/ansible/inventory/hosts.yaml
@@ -7,14 +7,18 @@ all:
         beryllium.dysnomia.studio:
         bore.dysnomia.studio:
 
-    k3s_server:
+    private_ip:
       hosts:
+        #192.168.1.2
         192.168.1.3:
         192.168.1.4:
         192.168.1.5:
 
+    ## Groups for playbooks
+    k3s_server:
+      children:
+        private_ip:
+
     k3s_cluster:
-      hosts:
-        192.168.1.3:
-        192.168.1.4:
-        192.168.1.5:
+      children:
+        private_ip:
