--- a/production/ansible/roles/cluster-config/tasks/main.yml
+++ b/production/ansible/roles/cluster-config/tasks/main.yml
@@ -20,9 +20,9 @@
     state: absent
   changed_when: false
 
-- name: Wait for control-plane at {{ apiserver_endpoint }}:6443
+- name: Wait for control-plane at 192.168.1.3:6443
   wait_for:
-    host: "{{ apiserver_endpoint }}"
+    host: "192.168.1.3"
     port: "6443"
     timeout: 60
 
