--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -231,17 +231,31 @@
         protocol: udp
 
     # K3S
-    - name: Allow port traffic on 127.0.0.1
+    - name: Allow all traffic on 127.0.0.1
       iptables:
         chain: OUTPUT
         destination: 127.0.0.1
         jump: ACCEPT
         protocol: tcp 
 
-    - name: Allow port traffic on 192.168.1.0/24
+    - name: Allow all traffic on 192.168.1.0/24
       iptables:
         chain: OUTPUT
         destination: 192.168.1.0/24
+        jump: ACCEPT
+        protocol: tcp 
+
+    - name: Allow all traffic on 192.168.1.0/24
+      iptables:
+        chain: OUTPUT
+        destination: 192.168.1.0/24
+        jump: ACCEPT
+        protocol: udp 
+
+    - name: Allow all traffic on 192.168.50.0/24
+      iptables:
+        chain: OUTPUT
+        destination: 192.168.50.0/24
         jump: ACCEPT
         protocol: tcp 
 
