--- a/production/ansible/roles/reset/ha/kube-vip/tasks/main.yml
+++ b/production/ansible/roles/reset/ha/kube-vip/tasks/main.yml
@@ -34,8 +34,8 @@
 # Remove cluster VIP from interface
 # kube-vip does not do this for you
 
-- name: Remove {{ ha_cluster_vip }}/{{ kube_vip_cidr }} from {{ ansible_default_ipv4.interface }}
-  command: "ip address delete {{ ha_cluster_vip }}/{{ kube_vip_cidr }} dev {{ ansible_default_ipv4.interface }}"
+- name: Remove {{ ha_cluster_vip }}/{{ kube_vip_cidr }} from {{ kube_vip_interface }}
+  command: "ip address delete {{ ha_cluster_vip }}/{{ kube_vip_cidr }} dev {{ kube_vip_interface }}"
   register: ipaddr_delete
   when: ha_cluster_vip in (ansible_all_ipv4_addresses | list)
 
