--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -3,9 +3,18 @@
   become: true
   become_user: root
   tasks:
-    - name: Flush existing firewall rules
+    - name: Iptables flush filter
       iptables:
-        flush: true
+        chain: "{{ item }}"
+        flush: yes
+      with_items:  [ 'INPUT', 'FORWARD', 'OUTPUT' ]
+
+    - name: Iptables flush nat
+      iptables:
+        table: nat
+        chain: '{{ item }}'
+        flush: yes
+      with_items: [ 'INPUT', 'OUTPUT', 'PREROUTING', 'POSTROUTING' ]
 
     - name: Allow all loopback traffic (INPUT)
       iptables:
