Production - Auto-deploy argocd & create apps

--- a/production/ansible/inventory/group_vars/all/secrets.example
+++ b/production/ansible/inventory/group_vars/all/secrets.example
@@ -1,2 +1,5 @@
 vaulted_ansible_user: USERNAME
 vaulted_k3s_token: PASSWORD
+vaulted_argocd_admin_password: PASSWORD
+vaulted_argocd_github_username: USERNAME
+vaulted_argocd_github_token: PASSWORD
