Production - Automatically grant access to ghcr

--- a/production/ansible/inventory/group_vars/all/secrets.example
+++ b/production/ansible/inventory/group_vars/all/secrets.example
@@ -3,3 +3,4 @@ vaulted_k3s_token: PASSWORD
 vaulted_argocd_admin_password: PASSWORD
 vaulted_argocd_github_username: USERNAME
 vaulted_argocd_github_token: PASSWORD
+vaulted_argocd_github_mail: MAIL
