--- a/production/ansible/inventory/group_vars/all/secrets.example
+++ b/production/ansible/inventory/group_vars/all/secrets.example
@@ -4,3 +4,5 @@ vaulted_argocd_admin_password: PASSWORD
 vaulted_argocd_github_username: USERNAME
 vaulted_argocd_github_token: PASSWORD
 vaulted_argocd_github_mail: MAIL
+vaulted_postgres_admin_username: USERNAME
+vaulted_postgres_admin_password: PASSWORD
