--- a/production/ansible/playbooks/aliases.yaml
+++ b/production/ansible/playbooks/aliases.yaml
@@ -17,7 +17,7 @@
     - name: Add grafana-dashboard alias on servers
       lineinfile:
         path=/root/.bashrc
-        line="alias grafana-dashboard=\"kubectl port-forward -n dysnomia-apps \\"$(kubectl get pods -n dysnomia-apps | grep '^pgwatch-' | awk '{print $1}')\\" 3000:3000 --address='192.168.1.3'\""
+        line="alias grafana-dashboard=\"kubectl port-forward -n dysnomia-apps \\"$(kubectl get pods -n dysnomia-apps | grep '^grafana-' | awk '{print $1}')\\" 3000:3000 --address='192.168.1.3'\""
         owner=root
         regexp='^alias grafana-dashboard='
         state=present
