--- a/production/ansible/playbooks/aliases.yaml
+++ b/production/ansible/playbooks/aliases.yaml
@@ -44,6 +44,16 @@
         insertafter=EOF
         create=True
 
+    - name: Add postgres-route alias on servers
+      lineinfile:
+        path=/root/.bashrc
+        line="alias postgres-route=\"kubectl port-forward -n dysnomia-apps svc/postgres 15432:5432 --address='192.168.1.3'\""
+        owner=root
+        regexp='^alias postgres-route='
+        state=present
+        insertafter=EOF
+        create=True
+
     - name: Add traefik-dashboard alias on servers
       lineinfile:
         path=/root/.bashrc
