--- a/production/ansible/inventory/hosts.yaml
+++ b/production/ansible/inventory/hosts.yaml
@@ -26,3 +26,8 @@ all:
     postgres_cluster:
       hosts:
         192.168.1.3:
+
+    postgres_backup_servers:
+      hosts:
+        192.168.1.3:
+        192.168.1.4:
