--- a/production/ansible/roles/prereq/tasks/main.yml
+++ b/production/ansible/roles/prereq/tasks/main.yml
@@ -52,3 +52,10 @@
     path: /etc/sudoers
     validate: 'visudo -cf %s'
   when: ansible_distribution in ['CentOS', 'Red Hat Enterprise Linux']
+
+- name: Install deps
+  ansible.builtin.package:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - open-iscsi # Needed for longhorn
