--- a/production/ansible/playbooks/aliases.yaml
+++ b/production/ansible/playbooks/aliases.yaml
@@ -24,6 +24,16 @@
         insertafter=EOF
         create=True
 
+    - name: kubectlgetall command
+      lineinfile:
+        path=/root/.bashrc
+        line="kubectlgetall() { for i in $(kubectl api-resources --verbs=list --namespaced -o name | grep -v \"events.events.k8s.io\" | grep -v \"events\" | sort | uniq); do echo \"Resource:\" $i; kubectl -n ${1} get --ignore-not-found ${i}; done; }"
+        owner=root
+        regexp='^kubectlgetall() {'
+        state=present
+        insertafter=EOF
+        create=True
+
     - name: Add longhorn-dashboard alias on servers
       lineinfile:
         path=/root/.bashrc
