--- a/production/octodns/config/elanis.eu.yaml
+++ b/production/octodns/config/elanis.eu.yaml
@@ -6,6 +6,11 @@
     - 138.201.58.15
     - 51.75.131.105
   - ttl: 0
+    type: AAAA
+    values:
+    - '2001:41d0:303:8a69::'
+    - 2a01:4f8:172:130e::2
+  - ttl: 0
     type: MX
     values:
     - exchange: mail.protonmail.ch.
