--- a/production/octodns/config/dysnomia.studio.yaml
+++ b/production/octodns/config/dysnomia.studio.yaml
@@ -67,6 +67,10 @@ cloud:
   ttl: 0
   type: CNAME
   value: dysnomia.studio.
+fz:
+  ttl: 0
+  type: CNAME
+  value: dysnomia.studio.
 gitea:
 - type: A
   value: 94.23.197.186
