Add kube-oldest-pods alias

--- a/production/ansible/playbooks/aliases.yaml
+++ b/production/ansible/playbooks/aliases.yaml
@@ -34,6 +34,16 @@
         insertafter=EOF
         create=True
 
+    - name: Add kube-oldest-pods alias on servers
+      lineinfile:
+        path=/root/.bashrc
+        line="alias kube-oldest-pods=\"kubectl get pods --all-namespaces --sort-by=.metadata.creationTimestamp | grep -v kube-system | grep -v longhorn-system | head -n 20\""
+        owner=root
+        regexp='^alias kube-oldest-pods='
+        state=present
+        insertafter=EOF
+        create=True
+
     - name: Add longhorn-dashboard alias on servers
       lineinfile:
         path=/root/.bashrc
