--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -503,6 +503,13 @@
         destination: 10.0.0.0/8
         jump: ACCEPT
 
+    - name: Allow all traffic to 10.0.0.0/8 (INPUT) from 192.168.1.0/24
+      iptables:
+        chain: INPUT
+        destination: 10.0.0.0/8
+        source: 192.168.1.0/24
+        jump: ACCEPT
+
     # Flannel
     - name: Allow flannel listener port (8472) (OUTPUT)
       iptables:
