--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -542,3 +542,15 @@
         chain: OUTPUT
         jump: DROP
         ip_version: ipv6
+
+    - name: Restart wireguard service
+      ansible.builtin.service:
+        name: wg-quick@wg0
+        state: restarted
+        enabled: yes
+
+    - name: Restart k3s service
+      ansible.builtin.service:
+        name: k3s
+        state: restarted
+        enabled: yes
