Apply iptable rules on servers one by one to prevent issues

--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -2,6 +2,7 @@
   hosts: private_ip
   become: true
   become_user: root
+  serial: 1
   tasks:
     - name: Iptables flush filter (ipv4)
       iptables:
