Production/Ansible - Always restart fail2ban after config update

--- a/production/ansible/playbooks/fail2ban.yaml
+++ b/production/ansible/playbooks/fail2ban.yaml
@@ -15,3 +15,8 @@
       owner: root
       group: root
       mode: '0644'
+  - name: Restart fail2ban service
+    ansible.builtin.service:
+      name: fail2ban
+      state: restarted
+      enabled: yes
