--- a/production/octodns/config/dysnomia.studio.yaml
+++ b/production/octodns/config/dysnomia.studio.yaml
@@ -69,6 +69,13 @@ bugs:
   ttl: 0
   type: CNAME
   value: dysnomia.studio.
+carbon:
+- ttl: 0
+  type: A
+  value: 188.165.200.10
+- ttl: 0
+  type: AAAA
+  value: '2001:41d0:2:910a::1'
 cloud:
   ttl: 0
   type: CNAME
@@ -98,6 +105,20 @@ n8n:
   ttl: 0
   type: CNAME
   value: dysnomia.studio.
+nitrogen:
+- ttl: 0
+  type: A
+  value: 37.187.74.34
+- ttl: 0
+  type: AAAA
+  value: '2001:41d0:a:2a22::1'
+oxygen:
+- ttl: 0
+  type: A
+  value: 176.9.116.19
+- ttl: 0
+  type: AAAA
+  value: '2a01:4f8:151:64ec::'
 protonmail2._domainkey:
   ttl: 0
   type: CNAME
