Production/Ansible - Fix mesh network setup

--- a/production/ansible/playbooks/setup_mesh_network.yaml
+++ b/production/ansible/playbooks/setup_mesh_network.yaml
@@ -4,6 +4,9 @@
   become: true
   become_user: root
   tasks:
+  - name: Update apt repo and cache on all servers
+    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+
   - name: Install linux-headers-generic
     ansible.builtin.package:
       name: linux-headers-generic
