--- a/production/ansible/inventory/hosts.yaml
+++ b/production/ansible/inventory/hosts.yaml
@@ -2,28 +2,26 @@ all:
   children:
     public_ip:
       hosts:
-        helium.dysnomia.studio:
-        lithium.dysnomia.studio:
-        beryllium.dysnomia.studio:
-        bore.dysnomia.studio:
+        carbon.dysnomia.studio:
+        nitrogen.dysnomia.studio:
+        oxygen.dysnomia.studio:
 
     private_ip:
       hosts:
-        192.168.1.2:
-        192.168.1.3:
-        192.168.1.4:
-        #192.168.1.5:
+        192.168.1.6:
+        192.168.1.7:
+        192.168.1.8:
 
     ## Groups for playbooks
-    k3s_server:
-      children:
-        private_ip:
-
     k3s_cluster:
       children:
-        private_ip:
+          server:
+            children:
+              private_ip:
+          agent:
+            children:
+              private_ip:
 
     postgres_backup_servers:
-      hosts:
-        192.168.1.3:
-        192.168.1.4:
+      children:
+        private_ip:
