--- a/production/ansible/playbooks/firewall.yaml
+++ b/production/ansible/playbooks/firewall.yaml
@@ -4,14 +4,14 @@
   become_user: root
   serial: 1
   tasks:
-    - name: Iptables flush filter (ipv4)
+    - name: Iptables flush filter - ipv4
       iptables:
         chain: "{{ item }}"
         flush: yes
         ip_version: ipv4
       with_items:  [ 'INPUT', 'FORWARD', 'OUTPUT' ]
 
-    - name: Iptables flush nat (ipv4)
+    - name: Iptables flush nat - ipv4
       iptables:
         table: nat
         chain: '{{ item }}'
@@ -19,14 +19,14 @@
         ip_version: ipv4
       with_items: [ 'INPUT', 'OUTPUT', 'PREROUTING', 'POSTROUTING' ]
       
-    - name: Iptables flush filter (ipv6)
+    - name: Iptables flush filter - ipv6
       iptables:
         chain: "{{ item }}"
         flush: yes
         ip_version: ipv6
       with_items:  [ 'INPUT', 'FORWARD', 'OUTPUT' ]
 
-    - name: Iptables flush nat (ipv6)
+    - name: Iptables flush nat - ipv6
       iptables:
         table: nat
         chain: '{{ item }}'
@@ -34,7 +34,7 @@
         ip_version: ipv6
       with_items: [ 'INPUT', 'OUTPUT', 'PREROUTING', 'POSTROUTING' ]
 
-    - name: Allow all loopback traffic (INPUT)
+    - name: Allow all loopback traffic (INPUT) - ipv4
       iptables:
         action: append
         chain: INPUT
@@ -42,7 +42,7 @@
         jump: ACCEPT
         ip_version: ipv4
 
-    - name: Allow all loopback traffic (FORWARD)
+    - name: Allow all loopback traffic (FORWARD) - ipv4
       iptables:
         action: append
         chain: FORWARD
@@ -50,35 +50,53 @@
         jump: ACCEPT
         ip_version: ipv4
 
-    - name: Allow all loopback traffic (INPUT)
+    - name: Allow all loopback traffic (INPUT) - ipv6
       iptables:
         action: append
         chain: INPUT
         in_interface: lo
         jump: ACCEPT
-        ip_version: ipv4
+        ip_version: ipv6
 
-    - name: Allow all loopback traffic (FORWARD)
+    - name: Allow all loopback traffic (FORWARD) - ipv6
       iptables:
         action: append
         chain: FORWARD
         in_interface: lo
         jump: ACCEPT
-        ip_version: ipv4
+        ip_version: ipv6
 
-    - name: Allow all wireguard mesh network traffic (INPUT)
+    - name: Allow all wireguard mesh network traffic (INPUT) - ipv4
       iptables:
         action: append
         chain: INPUT
         in_interface: wg0
         jump: ACCEPT
+        ip_version: ipv4
 
-    - name: Allow all wireguard mesh network traffic (FORWARD)
+    - name: Allow all wireguard mesh network traffic (FORWARD) - ipv4
       iptables:
         action: append
         chain: FORWARD
         in_interface: wg0
         jump: ACCEPT
+        ip_version: ipv4
+
+    - name: Allow all wireguard mesh network traffic (INPUT) - ipv6
+      iptables:
+        action: append
+        chain: INPUT
+        in_interface: wg0
+        jump: ACCEPT
+        ip_version: ipv6
+
+    - name: Allow all wireguard mesh network traffic (FORWARD) - ipv6
+      iptables:
+        action: append
+        chain: FORWARD
+        in_interface: wg0
+        jump: ACCEPT
+        ip_version: ipv6
 
     - name: Allow related and established connections (INPUT) - ipv4
       ansible.builtin.iptables:
@@ -139,7 +157,7 @@
         ip_version: ipv6        
 
     # SSH
-    - name: Allow port 22/SSH traffic (INPUT)
+    - name: Allow port 22/SSH traffic (INPUT) - ipv4
       iptables:
         chain: INPUT
         destination_port: '22'
@@ -147,15 +165,15 @@
         protocol: tcp
         ip_version: ipv4
 
-    - name: Allow port 22/SSH traffic (OUTPUT)
+    - name: Allow port 22/SSH traffic (OUTPUT) - ipv4
       iptables:
         chain: OUTPUT
         destination_port: '22'
         jump: ACCEPT
         protocol: tcp
-        ip_version: ipv4     
+        ip_version: ipv4
 
-    - name: Allow port 22/SSH traffic (INPUT)
+    - name: Allow port 22/SSH traffic (INPUT) - ipv6
       iptables:
         chain: INPUT
         destination_port: '22'
@@ -163,36 +181,30 @@
         protocol: tcp
         ip_version: ipv6
 
-    - name: Allow port 22/SSH traffic (OUTPUT)
+    - name: Allow port 22/SSH traffic (OUTPUT) - ipv6
       iptables:
         chain: OUTPUT
         destination_port: '22'
         jump: ACCEPT
         protocol: tcp 
-        ip_version: ipv6  
-
-    # FTP (to access to SoYouStart backup servers)
-    - name: Allow port 21/FTP traffic (OUTPUT)
-      iptables:
-        chain: OUTPUT
-        destination_port: '21'
-        jump: ACCEPT
-        protocol: tcp
-
-    - name: Allow port 20/FTP traffic (OUTPUT)
-      iptables:
-        chain: OUTPUT
-        destination_port: '20'
-        jump: ACCEPT
-        protocol: tcp
+        ip_version: ipv6
 
     # DNS
-    - name: Allow port 53/DNS traffic (OUTPUT)
+    - name: Allow port 53/DNS traffic (OUTPUT) - ipv4
       iptables:
         chain: OUTPUT
         destination_port: '53'
         jump: ACCEPT
-        protocol: udp
+        protocol: udp 
+        ip_version: ipv4
+
+    - name: Allow port 53/DNS traffic (OUTPUT) - ipv6
+      iptables:
+        chain: OUTPUT
+        destination_port: '53'
+        jump: ACCEPT
+        protocol: udp 
+        ip_version: ipv6
 
     # Web - ipv4
     - name: Allow port 80/HTTP traffic (INPUT - ipv4 - tcp)
@@ -415,7 +427,7 @@
         ip_version: ipv6
 
     # Wireguard
-    - name: Allow wireguard listener port (51820) (INPUT)
+    - name: Allow wireguard listener port (51820) (INPUT) - ipv4
       iptables:
         chain: INPUT
         destination_port: '51820'
@@ -423,7 +435,7 @@
         protocol: udp 
         ip_version: ipv4
 
-    - name: Allow wireguard listener port (51820) (OUTPUT)
+    - name: Allow wireguard listener port (51820) (OUTPUT) - ipv4
       iptables:
         chain: OUTPUT
         destination_port: '51820'
@@ -431,7 +443,7 @@
         protocol: udp
         ip_version: ipv4
 
-    - name: Allow wireguard listener port (51820) (INPUT)
+    - name: Allow wireguard listener port (51820) (INPUT) - ipv6
       iptables:
         chain: INPUT
         destination_port: '51820'
@@ -439,7 +451,7 @@
         protocol: udp 
         ip_version: ipv6
 
-    - name: Allow wireguard listener port (51820) (OUTPUT)
+    - name: Allow wireguard listener port (51820) (OUTPUT) - ipv6
       iptables:
         chain: OUTPUT
         destination_port: '51820'
@@ -447,7 +459,7 @@
         protocol: udp
         ip_version: ipv6
 
-    - name: Allow wireguard listener port (51830) (INPUT)
+    - name: Allow wireguard listener port (51830) (INPUT) - ipv4
       iptables:
         chain: INPUT
         destination_port: '51830'
@@ -455,7 +467,7 @@
         protocol: udp 
         ip_version: ipv4
 
-    - name: Allow wireguard listener port (51830) (OUTPUT)
+    - name: Allow wireguard listener port (51830) (OUTPUT) - ipv4
       iptables:
         chain: OUTPUT
         destination_port: '51830'
@@ -463,7 +475,7 @@
         protocol: udp
         ip_version: ipv4
 
-    - name: Allow wireguard listener port (51830) (INPUT)
+    - name: Allow wireguard listener port (51830) (INPUT) - ipv6
       iptables:
         chain: INPUT
         destination_port: '51830'
@@ -471,7 +483,7 @@
         protocol: udp 
         ip_version: ipv6
 
-    - name: Allow wireguard listener port (51830) (OUTPUT)
+    - name: Allow wireguard listener port (51830) (OUTPUT) - ipv6
       iptables:
         chain: OUTPUT
         destination_port: '51830'
@@ -492,6 +504,13 @@
         destination: 192.168.1.0/24
         jump: ACCEPT
 
+    - name: Allow all traffic on fd00:cafe:aaaa::/56
+      iptables:
+        chain: OUTPUT
+        destination: fd00:cafe:aaaa::/56
+        jump: ACCEPT
+        ip_version: ipv6
+
     - name: Allow all traffic on 192.168.50.0/24
       iptables:
         chain: OUTPUT
@@ -504,6 +523,20 @@
         destination: 10.0.0.0/8
         jump: ACCEPT
 
+    - name: Allow all traffic on fd00:cafe:42::/56
+      iptables:
+        chain: OUTPUT
+        destination: fd00:cafe:42::/56
+        jump: ACCEPT
+        ip_version: ipv6
+
+    - name: Allow all traffic on fd00:cafe:43::/56
+      iptables:
+        chain: OUTPUT
+        destination: fd00:cafe:43::/56
+        jump: ACCEPT
+        ip_version: ipv6
+
     - name: Allow all traffic to 10.0.0.0/8 (INPUT) from 192.168.1.0/24
       iptables:
         chain: INPUT
@@ -512,12 +545,21 @@
         jump: ACCEPT
 
     # Flannel
-    - name: Allow flannel listener port (8472) (OUTPUT)
+    - name: Allow flannel listener port (8472) (OUTPUT) - ipv4
       iptables:
         chain: OUTPUT
         destination_port: '8472'
         jump: ACCEPT
         protocol: udp
+        ip_version: ipv4
+
+    - name: Allow flannel listener port (8472) (OUTPUT) - ipv6
+      iptables:
+        chain: OUTPUT
+        destination_port: '8472'
+        jump: ACCEPT
+        protocol: udp
+        ip_version: ipv6
 
     # Drop other traffic
     - name: Drop any traffic without rule (INPUT) - ipv4
