--- a/production/ansible/playbooks/k3s_setup.yaml
+++ b/production/ansible/playbooks/k3s_setup.yaml
@@ -1,34 +1,21 @@
 ---
-
-- name: Prepare hosts for k3s installation
+- name: Cluster prep
   hosts: k3s_cluster
-  gather_facts: yes
-  become: yes
+  gather_facts: true
+  become: true
   roles:
-    - role: config-check
-      run_once: true
     - role: prereq
-    - role: download
+    - role: airgap
     - role: raspberrypi
 
-- name: Install the k3s servers
-  hosts: k3s_server
-  gather_facts: no
-  become: yes
+- name: Setup K3S server
+  hosts: server
+  become: true
   roles:
-    - role: k3s/server
+    - role: k3s_server
 
-- name: Fetch cluster config and wait for control-plane before setting up agents
-  hosts: 127.0.0.1
-  connection: local
-  gather_facts: no
+- name: Setup K3S agent
+  hosts: agent
+  become: true
   roles:
-    - role: cluster-config
-
-- name: Install the k3s agents
-  hosts: k3s_agent
-  gather_facts: no
-  become: yes
-  roles:
-    - role: k3s/agent
-
+    - role: k3s_agent
