--- a/production/ansible/roles/raspberrypi/tasks/prereq/ArchLinux.yml
+++ b/production/ansible/roles/raspberrypi/tasks/prereq/ArchLinux.yml
@@ -1,15 +1,13 @@
 ---
-- name: Enable cgroup support if not already enabled
-  lineinfile:
+- name: Enable cgroup via boot commandline if not already enabled
+  ansible.builtin.replace:
     path: /boot/boot.txt
-    backrefs: yes
-    regexp: '^((?!.*\bcgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory\b).*)$'
-    line: '\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory'
-  register: cgroup_support
-
-- name: Regenerate bootloader image
-  shell: ./mkscr
-  args:
-    chdir: /boot
-  notify: reboot
-  when: cgroup_support.changed
+    regexp: '^(setenv bootargs console=ttyS1,115200 console=tty0 root=PARTUUID=\${uuid} rw rootwait smsc95xx.macaddr="\${usbethaddr}"(?!.*\b{{ cgroup_item }}\b).*)$'
+    replace: '\1 {{ cgroup_item }}'
+  with_items:
+    - "cgroup_enable=cpuset"
+    - "cgroup_memory=1"
+    - "cgroup_enable=memory"
+  loop_control:
+    loop_var: cgroup_item
+  notify: Regenerate bootloader image
