--- a/production/ansible/roles/raspberrypi/tasks/prereq/CentOS.yml
+++ b/production/ansible/roles/raspberrypi/tasks/prereq/CentOS.yml
@@ -1,8 +1,13 @@
 ---
-- name: Enable cgroup support if not already enabled
-  lineinfile:
+- name: Enable cgroup via boot commandline if not already enabled
+  ansible.builtin.replace:
     path: /boot/cmdline.txt
-    backrefs: yes
-    regexp: '^((?!.*\bcgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory\b).*)$'
-    line: '\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory'
-  notify: reboot
+    regexp: '^([\w](?!.*\b{{ cgroup_item }}\b).*)$'
+    replace: '\1 {{ cgroup_item }}'
+  with_items:
+    - "cgroup_enable=cpuset"
+    - "cgroup_memory=1"
+    - "cgroup_enable=memory"
+  loop_control:
+    loop_var: cgroup_item
+  notify: Reboot Pi
