--- a/production/ansible/roles/raspberrypi/tasks/prereq/Ubuntu.yml
+++ b/production/ansible/roles/raspberrypi/tasks/prereq/Ubuntu.yml
@@ -1,8 +1,23 @@
 ---
-- name: Enable cgroup support if not already enabled
-  lineinfile:
+- name: Enable cgroup via boot commandline if not already enabled
+  when: lookup('fileglob', '/boot/firmware/cmdline.txt', errors='warn') | length > 0
+  ansible.builtin.replace:
     path: /boot/firmware/cmdline.txt
-    backrefs: yes
-    regexp: '^((?!.*\bcgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory\b).*)$'
-    line: '\1 cgroup_enable=cpuset cgroup_memory=1 cgroup_enable=memory'
-  notify: reboot
+    regexp: '^([\w](?!.*\b{{ cgroup_item }}\b).*)$'
+    replace: '\1 {{ cgroup_item }}'
+  with_items:
+    - "cgroup_enable=cpuset"
+    - "cgroup_memory=1"
+    - "cgroup_enable=memory"
+  loop_control:
+    loop_var: cgroup_item
+  notify: Reboot Pi
+
+- name: Install Ubuntu Raspi Extra Packages
+  ansible.builtin.apt:
+    # Fixes issues in newer Ubuntu where VXLan isn't setup right.
+    # See: https://github.com/k3s-io/k3s/issues/4234
+    name: linux-modules-extra-raspi
+    update_cache: true
+    state: present
+  when: "ansible_distribution_version is version('20.10', '>=') and ansible_distribution_version is version('24.04', '<')"
